--- a/backend-assignment/pom.xml
+++ b/backend-assignment/pom.xml
@@ -50,6 +50,11 @@
 		    <scope>runtime</scope>
 		</dependency>
 		<dependency>
+  			<groupId>io.github.mivek</groupId>
+  			<artifactId>metarParser-services</artifactId>
+  			<version>2.20.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
